fix header overflow

--- a/style/main.css
+++ b/style/main.css
@@ -132,6 +132,7 @@ li.nav>a {
     margin-top: 3rem;
     height: 0;
     opacity: 0;
+    overflow: hidden;
 }
 
 .stack {
